--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body {
 }
 
 .nav-container {
-    height: 50px;
+    height: 35px;
     width: 70%;
     border-radius: 5px;
     margin: 0 auto;
@@ -48,14 +48,17 @@ body {
     cursor: pointer;
 }
 .nav-item {
-    padding: 8px;
+    padding: 6px;
     width: 100px ;
     margin: 0;
     text-align: center;
+    border: 1px solid black;
 
 }
-.form-item {
+#form-item {
     width: 155px;
+    border: none;
+    height: 34px;
     padding: 0;
     background-color: transparent;
 }
@@ -73,11 +76,36 @@ input[type="text"] {
     height: 25px;
     padding: 0;
     background-color: transparent;
+    border-color: none;
 }
 
 .text-fields {
     position: absolute;
-    top: -100px;
+    top: 180px;
+    color: #fff;
+}
+
+.p-header > img, .p-text > img {
+    cursor: pointer;
+}
+.p-footer {
+    display: flex;
+    justify-content: center;
+    height: 50px;
+}
+
+.text-fields a {
+    text-decoration: none;
+    color: #fff;
+}
+.text-fields a:hover {
+    text-decoration: underline;
+}
+
+.up {
+    margin-right: 20px;
+    padding-top: 8px;
+    font-size: 1.5em;
 }
 
 .image-container {
@@ -87,6 +115,7 @@ input[type="text"] {
 .img1, .img2, .img3, .img4 {
     height: 200px;
     width: 337px;
+    cursor: pointer;
 }
 .img1 {
     background-image: url("../images/promo_iphone5s.jpg");
@@ -125,6 +154,7 @@ input[type="text"] {
 
 .img-container {
     margin-left: -77px;
+    cursor: pointer;
 }
 
 .footer-container {
