added li to the ul items

--- a/css/style.css
+++ b/css/style.css
@@ -239,3 +239,6 @@ input[type="text"] {
 .footer-container a:hover {
   text-decoration: underline;
 }
+.footer-links ul {
+    list-style-type: none;
+}
