--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,8 @@ body {
   margin: 0;
   background-image: url("../images/bg-img.jpg");
   background-repeat: no-repeat;
-  background-position: 0% 162%;
+  background-size: cover;
+  background-position: 0% 180%;
 }
 
 .header-container {
@@ -69,12 +70,11 @@ body {
   width: 70%;
   border-radius: 5px;
   margin: 0 auto;
-  background-image: url("../images/nav-bg.png");
-  background-position: 50% 0;
-  background-repeat: no-repeat;
-  z-index: 9998;
+  background: rgb(128, 128, 128);
+  background: linear-gradient(rgb(128, 128, 128) 48%, rgb(114, 112, 112) 50%);
+  
   display: flex;
-  margin-top: 7%;
+  margin-top: 10%;
 }
 
 .logo {
@@ -94,7 +94,7 @@ body {
 }
 
 .nav-item:hover {
-  background-color: grey;
+  background-color: rgb(128, 128, 128);
 }
 
 #form-item {
@@ -127,11 +127,13 @@ input[type="text"] {
 
 .search-icon {
   position: absolute;
-  top: 104px;
+  top: 144px;
   width: 17px;
   right: 322px;
   height: 17px;
   background-image: url("../images/search.PNG");
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .text-fields {
@@ -174,8 +176,7 @@ input[type="text"] {
 }
 
 .image-container {
-  display: flex;
-  margin-top: 3px;
+  margin-top: 0;
 }
 
 .img1,
@@ -185,26 +186,32 @@ input[type="text"] {
   height: 200px;
   width: 337px;
   cursor: pointer;
+  float: left;
+  margin-top: 28px;
 }
 
 .img1 {
   background-image: url("../images/promo_iphone5s.jpg");
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .img2 {
   background-image: url("../images/promo_iphone5c.jpg");
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .img3 {
   background-image: url("../images/promo_30_years.jpg");
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .img4 {
   background-image: url(../images/promo_supplier_responsibility.jpg);
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .image-container img {
