--- a/css/style.css
+++ b/css/style.css
@@ -5,31 +5,34 @@
 }
 
 body {
-  font: 12px/18px "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, Verdana, sans-serif;
   background-color: #eee;
   color: #333;
   margin: 0;
+  width: 100%;
+}
+
+.background {
   background-image: url("../images/bg-img.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: 50% 168%;
-  width: 100%;
+  background-clip: border-box;
+  background-position: 50% 166%;
+  
 }
 
 .header-container {
   background-color: transparent;
   width: 100%;
-  display: flex;
+  display: block;
   justify-content: center;
-  height: 513px;
-  
+  height: 510px;
 }
 
 .nav-container {
   position: relative;
   top: 80px;
   height: 35px;
-  width: 980px;
+  width: 75%;
   border-radius: 4px;
   background: rgb(128, 128, 128);
   background: linear-gradient(rgb(128, 128, 128) 48%, rgb(114, 112, 112) 50%);
@@ -48,7 +51,7 @@ body {
 
 .nav-item {
   padding: 6px;
-  width: 100px;
+  width: 120px;
   margin: 0;
   text-align: center;
   border-right: 1px solid rgb(80, 77, 77);
@@ -96,14 +99,41 @@ input[type="text"] {
 }
 
 .text-fields {
-  position: absolute;
-  top: 180px;
+  position: relative;
+  display: block;
+  top: 150px;
+  width: 100%;
   color: #fff;
 }
 
-.p-header > img,
-.p-text > img {
-  cursor: pointer;
+.text-fields p, 
+.text-fields a {
+    margin: 0 auto;
+}
+
+.p-header,
+.p-text {
+  text-align: center;
+  width: 75%;
+}
+
+.p-header {
+  font: 74px/18px Arial, Helvetica, sans-serif;
+  line-height: 1em;
+}
+
+.p-text {
+  font-size: 2.0em;
+  font-family: Arial, Helvetica, sans-serif;
+  position: relative; 
+  top: 30px;
+  line-height: 1.25em;
+}
+
+.text-fields a {
+  font-size: 1em;
+  position: relative; 
+  top: 50px;
 }
 
 .p-footer {
@@ -135,8 +165,10 @@ input[type="text"] {
 }
 
 .image-container {
-  margin-top: 2px;
+  position: relative;
+  top: 2px;
   width: 100%;
+  z-index: 1;
 }
 
 .img1,
@@ -144,7 +176,7 @@ input[type="text"] {
 .img3,
 .img4 {
   height: 200px;
-  width: 337px;
+  width: 25%;
   float: left;
   margin-top: 0;
 }
@@ -181,7 +213,7 @@ input[type="text"] {
   display: flex;
   justify-content: space-between;
   font-size: 0.8em;
-  width: 75%;
+  width: 80%;
   margin: 0 auto;
   height: 40px;
   padding: 20px 20px;
@@ -194,12 +226,12 @@ input[type="text"] {
 }
 
 .img-container {
-  margin-left: -40px;
+  margin-left: 5px;
 }
 
 .footer-container {
   padding: 15px 20px;
-  width: 75%;
+  width: 80%;
   margin: 0 auto;
   font-size: 0.8em;
 }
@@ -208,3 +240,9 @@ input[type="text"] {
 .footer-container a:hover {
   text-decoration: underline;
 }
+
+@media only screen and (max-width: 600px) {
+    .background {
+      background-position: 50% 450%;
+    }
+  }
